# pr_ros_controllers

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  plugins.xml
force_gate_controller/: CMakeLists.txt  README.md  force_gate_controller_allocator_plugin.xml  force_gate_controller_plugin.xml  force_gate_plugin.xml  package.xml
force_gate_controller/include/force_gate_controller/: force_gate_controller.hpp  force_gate_parent.hpp  force_gate_position_controller.hpp  force_gate_velocity_controller.hpp  interpolation_methods.hpp  tolerances.hpp  trajectory.hpp  validate_jtc_parameters.hpp  visibility_control.h
force_gate_controller/src/: force_gate_controller.cpp  force_gate_controller_parameters.yaml  force_gate_parent.cpp  force_gate_position_controller.cpp  force_gate_velocity_controller.cpp  joint_trajectory_controller_plugin.cpp  tolerances.cpp  trajectory.cpp  validate_jtc_parameters.cpp
force_gate_controller/test/: test_load_force_gate_controller.cpp  test_trajectory.cpp  test_trajectory_actions.cpp  test_trajectory_controller.cpp  test_trajectory_controller_utils.hpp
force_gate_controller/test/config/: test_force_gate_controller.yaml
include/pr_ros_controllers/: joint_mode_interface.h  pr_joint_velocity_controller.h
kdl_extension/: CMakeLists.txt  package.xml
kdl_extension/cmake/: FindEigen3.cmake
kdl_extension/include/kdl_extension/: JointDynamicsData.h  KdlChainIdRne.h  KdlTreeId.h  KdlTreeParser.h  KdlTreeUtilities.h
kdl_extension/src/kdl_extension/: JointDynamicsData.cpp  KdlChainIdRne.cpp  KdlTreeId.cpp  KdlTreeParser.cpp  KdlTreeUtilities.cpp
position_command_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
position_command_controller/include/position_command_controller/: PositionCommandController.h
position_command_controller/src/: PositionCommandController.cpp
pr_control_msgs/: CMakeLists.txt  package.xml
pr_control_msgs/action/: SetPosition.action  Tare.action  trigger.action
pr_hardware_interfaces/: CMakeLists.txt  package.xml
pr_hardware_interfaces/include/pr_hardware_interfaces/: MoveState.h  PositionCommandInterface.h  TareInterface.h  TareState.h  TriggerState.h  TriggerableInterface.h
pr_hardware_interfaces/src/: PositionCommandInterface.cpp  TareInterface.cpp  TriggerableInterface.cpp
pr_ros_controllers/: CMakeLists.txt  package.xml  plugins.xml
pr_ros_controllers/action/: Tare.action
pr_ros_controllers/include/pr_ros_controllers/: forcetorque_tare_controller.h  forward_joint_group_command_controller.h  joint_group_effort_controller.h  joint_group_position_controller.h  joint_group_velocity_controller.h  joint_mode_controller.h  pr_joint_position_controller.h  pr_joint_velocity_controller.h
pr_ros_controllers/include/pr_ros_controllers/detail/: forward_joint_group_command_controller_impl.h
pr_ros_controllers/src/: forcetorque_tare_controller.cpp  joint_group_effort_controller.cpp  joint_group_position_controller.cpp  joint_group_velocity_controller.cpp  joint_mode_controller.cpp  pr_joint_position_controller.cpp
rewd_controllers/: CMakeLists.txt  package.xml  rewd_controllers_plugins.xml
rewd_controllers/include/rewd_controllers/: RosMsgConverter.h  gravity_compensation_controller.h  joint_group_position_controller.h  joint_group_velocity_controller.h
rewd_controllers/scripts/: send_traj.py
rewd_controllers/src/: gravity_compensation_controller.cpp  inversedynamics_test.cpp  joint_group_position_controller.cpp  joint_group_velocity_controller.cpp
rewd_controllers/src/rewd_controllers/: RosMsgConverter.cpp  joint_group_position_controller.cpp
src/: joint_mode_controller.cpp  pr_joint_velocity_controller.cpp
tare_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
tare_controller/include/tare_controller/: tare_controller.h  tare_controller_impl.h
tare_controller/src/: tare_controller.cpp
trigger_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
trigger_controller/include/trigger_controller/: TriggerController.h
trigger_controller/src/: TriggerController.cpp
