<?xml version="1.0"?>
<package format="3">
  <name>force_gate_controller</name>
  <version>3.13.0</version>
  <description>Controller for executing joint-space trajectories on a group of joints with F/T safety thresholds, tracking ros2_controllers/joint_trajectory_controller</description>
  <maintainer email="ekgordon@cs.washington.edu">Ethan K. Gordon</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>realtime_tools</exec_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>forward_command_controller</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rsl</depend>
  <depend>tl_expected</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
