<?xml version="1.0"?>
<package format="2">
  <name>kdl_extension</name>
  <version>0.0.1</version>
  <description>The kdl_extension package</description>
  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>orocos_kdl</depend>
</package>
