<?xml version="1.0"?>
<package>
  <name>pr_control_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the pr_ros_controllers package</description>

  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
