<?xml version="1.0"?>
<package format="2">
  <name>pr_hardware_interfaces</name>
  <version>0.0.0</version>
  <description>The pr_hardware_interfaces package</description>

  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>

  <license>BSD</license>
  <author email="cliddick@cmu.edu">Clint Liddick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hardware_interface</depend>

  <export>
  </export>
</package>
