<?xml version="1.0"?>
<package format="2">
  <name>pr_ros_controllers</name>
  <version>0.0.0</version>
  <description>pr_ros_controllers</description>
  <maintainer email="ekgordon@cs.uw.edu">Ethan K. Gordon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pr_control_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>
</package>
