<?xml version="1.0"?>
<package format="2">
  <name>rewd_controllers</name>
  <version>0.0.0</version>
  <description>The ROS Effort With Dynamics Controllers package</description>
  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/personalrobotics/pr_ros_controllers</url>
  <author email="cliddick@cmu.edu">Clint Liddick</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>boost</depend>
  <depend>dart</depend>
  <depend>controller_interface</depend> 
  <depend>control_msgs</depend> 
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>r3</depend> 
  <depend>forward_command_controller</depend>
  <depend>dynamic_reconfigure</depend>
  <export>
    <controller_interface plugin="${prefix}/rewd_controllers_plugins.xml"/>
  </export>
</package>
