<?xml version="1.0"?>
<package>
  <name>tare_controller</name>
  <version>0.0.0</version>
  <description>Controller package for taring actions</description>

  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>

  <license>BSD</license>
  <author email="cliddick@cmu.edu">Clint Liddick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pr_control_msgs</build_depend>
  <build_depend>pr_hardware_interfaces</build_depend>
  <build_depend>realtime_tools</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>pr_control_msgs</run_depend>
  <run_depend>pr_hardware_interfaces</run_depend>
  <run_depend>realtime_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
